# fsprompt

./: .gitignore  Cargo.toml  LICENSE  README.md  clippy.toml
.github/workflows/: release-simple.yml  release.yml
benches/: performance.rs  token_thresholds.rs  ui_performance.rs
docs/: CODE_SIGNING.md  LINUX_COMPATIBILITY.md
docs/api/: core-types.md  file-operations.md  state-management.md  ui-components.md  worker-api.md
docs/architecture/: overview.md  performance.md  threading-model.md  type-system.md  ui-architecture.md
docs/contributing/: CONTRIBUTING.md  development-setup.md  release-process.md  testing-guide.md
docs/examples/: advanced-patterns.md  basic-usage.md  customization.md  integration.md
docs/project/: changelog.md  known-issues.md  roadmap.md
docs/technical/: cross-platform.md  design-decisions.md  performance-tuning.md  security.md
docs/user-guide/: configuration.md  features.md  getting-started.md  keyboard-shortcuts.md  output-formats.md  troubleshooting.md
examples/: stress_test.rs
scripts/: build-release-local.sh  generate_test_tree.sh
scripts/packaging/: build-macos-pkg.sh  build-windows-installer.ps1  windows-installer.iss
scripts/packaging/macos-scripts/: postinstall
src/: app.rs  handlers.rs  lib.rs  main.rs  watcher.rs
src/core/: mod.rs  types.rs
src/state/: config.rs  history.rs  mod.rs
src/ui/: animations.rs  app_ui.rs  components.rs  components_painter.rs  footer.rs  header.rs  icons.rs  logo.rs  mod.rs  output_panel.rs  theme.rs  toast.rs  tree.rs
src/utils/: mod.rs  parallel_fs.rs  perf.rs
src/workers/: generator.rs  mod.rs
tests/integration/: file_selection_test.rs  mod.rs  worker_communication_test.rs
