[package]
name = "fsprompt"
version = "0.1.0"
edition = "2024"
authors = ["fsPrompt Contributors"]
description = "A high-performance filesystem prompt generator for LLMs"
license = "MIT"
repository = "https://github.com/yourusername/fsprompt"
readme = "README.md"
keywords = ["llm", "prompt", "filesystem", "codebase", "context"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
arboard = "3.5.0"
crossbeam = "0.8.4"
dirs = "5.0.1"
eframe = "0.31.1"
egui = "0.31.1"
fuzzy-matcher = "0.3.7"
glob = "0.3.1"
ignore = "0.4.23"
memmap2 = "0.9.5"
notify = "8.0.0"
puffin = "0.19.1"
rayon = "1.10.0"
regex = "1.11.1"
rfd = "0.15.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syntect = "5.2.0"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
