[package]
name = "fsprompt"
version = "0.1.0"
edition = "2021"
authors = ["fsPrompt Contributors"]
description = "A high-performance filesystem prompt generator for LLMs"
license = "MIT"
repository = "https://github.com/patrikpersson/codext-rs"
readme = "README.md"
keywords = ["llm", "prompt", "filesystem", "codebase", "context"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
arboard = "3.5.0"
crossbeam = "0.8.4"
dark-light = "2.0.0"
dirs = "5.0.1"
eframe = "0.31.1"
egui = "0.31.1"
egui_extras = { version = "0.31.1", features = ["svg"] }
fuzzy-matcher = "0.3.7"
glob = "0.3.2"
# Platform-specific dependencies below
ignore = "0.4.23"
image = "0.25.6"
libc = "0.2.172"
memmap2 = "0.9.5"
notify = "8.0.0"
num_cpus = "1.17.0"
puffin = "0.19.1"
rayon = "1.10.0"
regex = "1.11.1"
rfd = "0.15.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syntect = "5.2.0"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"

[dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports"] }
tempfile = "3.20.0"
walkdir = "2.5.0"

[[bench]]
name = "performance"
harness = false

[[bench]]
name = "token_thresholds"
harness = false

[[bench]]
name = "ui_performance"
harness = false
